--- a/foodPage.html
+++ b/foodPage.html
@@ -30,7 +30,7 @@
     <nav class="header__nav">
       <a href="mainPage.html" class="header__nav_link">головна</a>
       <a href="#" class="header__nav_link">звички</a>
-      <a href="#" class="header__nav_link">їжа</a>
+      <a href="#" class="header__nav_link active">їжа</a>
       <a href="#" class="header__nav_link">спорт</a>
     </nav>
   </header>
